@@ -176,6 +176,8 @@ endpointDeskCreate ::
         '[ WithStatus 201 Route.Api.Booking.ResponseDeskCreate
          , WithStatus 400 ErrorParseBodyJson
          , WithStatus 401 ErrorBearerAuth
+         , WithStatus 403 (StaticText "Insufficient permission.")
+         , WithStatus 404 (StaticText "Space not found.")
          , WithStatus 500 ()
          ]
     )
